# swagger_server/swagger/swagger.yaml
@@ -37,30 +37,6 @@ paths:
         "409":
           description: "already exists"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /student/:
-    get:
-      summary: "Get a student by properties"
-      description: "Returns a single student"
-      operationId: "get_student"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - in: "query"
-        name: "last_name"
-        description: "Last name to query on"
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid ID supplied"
-        "404":
-          description: "student not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student/{student_id}:
     get:
       summary: "Find student by ID"
@@ -127,10 +103,11 @@ definitions:
         type: "string"
       grades:
         type: "object"
-        additionalProperties: {}
+        additionalProperties:
+          type: "number"
     example:
       student_id: 0
       last_name: "last_name"
       grades:
-        key: ""
+        key: 6.02745618307040320615897144307382404804229736328125
       first_name: "first_name"
